--- a/AniRoute/src/scss/Home.scss
+++ b/AniRoute/src/scss/Home.scss
@@ -261,16 +261,6 @@
             height: 100%;
             z-index: -1;
 
-            &::after {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: linear-gradient(135deg, rgba(74, 144, 164, 0.8), rgba(125, 180, 199, 0.6));
-            }
-
             .hero-image {
                 width: 100%;
                 height: 100%;
@@ -313,19 +303,23 @@
             .hero-subtitle {
                 font-size: 1.5rem;
                 margin-bottom: 15px;
+                margin-left: 40px;
                 opacity: 0.95;
 
                 @media (max-width: 768px) {
                     font-size: 1.2rem;
+                    margin-left: 20px;
                 }
             }
 
             .hero-description {
                 font-size: 1.1rem;
+                margin-left: 80px;
                 opacity: 0.9;
 
                 @media (max-width: 768px) {
                     font-size: 1rem;
+                    margin-left: 40px;
                 }
             }
         }
