--- a/AniRoute/src/scss/Navbar.scss
+++ b/AniRoute/src/scss/Navbar.scss
@@ -44,7 +44,7 @@
                 display: block;
                 width: 24px;
                 height: 3px;
-                background-color: $color-o;
+                background-color: $color-b;
                 margin: 5px auto;
             }
 
