--- a/AniRoute/src/scss/Footer.scss
+++ b/AniRoute/src/scss/Footer.scss
@@ -1,8 +1,11 @@
+@use 'reset' as *;
+@use "variables" as *;
+
 // Footer
     .footer {
-        background: #2C3E50;
-        color: #FFFFFF;
-        padding: 60px 0 40px;
+        background: $color-b;
+        color: $color-g;
+        padding: 20px 0;
 
         .container {
             display: flex;
@@ -18,8 +21,9 @@
 
         .footer-left {
             display: flex;
+            flex-direction: column;
             align-items: flex-end;
-            gap: 30px;
+            gap: 15px;
 
             @media (max-width: 768px) {
                 flex-direction: column;
@@ -28,8 +32,8 @@
             }
 
             .footer-logo {
-                height: 40px;
-                width: auto;
+                height: auto;
+                width: 200px;
             }
 
             .footer-text {
@@ -47,11 +51,7 @@
         }
 
         .footer-right {
-            h4 {
-                font-size: 1.1rem;
-                margin-bottom: 15px;
-                color: #7DB4C7;
-            }
+            padding-right: 10px;
 
             .social-links {
                 display: flex;
