--- a/AniRoute/src/scss/ToursList.scss
+++ b/AniRoute/src/scss/ToursList.scss
@@ -56,7 +56,7 @@
     .main-content {
         max-width: 1200px;
         margin: 0 auto;
-        padding: 4rem 2rem;
+        padding: 50px 20px 0;
 
         @media (max-width: 768px) {
             padding: 2rem 1rem;
