--- a/AniRoute/src/scss/ToursList.scss
+++ b/AniRoute/src/scss/ToursList.scss
@@ -1,3 +1,6 @@
+@use 'reset' as *;
+@use "variables" as *;
+
 .tours-page {
     min-height: 100vh;
     font-family: 'Arial', sans-serif;
@@ -5,7 +8,7 @@
     .banner {
         position: relative;
         height: 60vh;
-        background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+        background: $color-b;
         background-image: url('path-to-banner-image');
         background-size: cover;
         background-position: center;
